<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="cabecera">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acerca">Acerca de</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="acercade">Asteroides es una aplicacion de juego consistente en darle a los meteoritos con la nave que vas tripulando. Implementado de "El gran libro de Android,
    por Andrés Alfonso Rubin de la Cruz (17130839)</string>
    <string name="title_activity_acerca_de">Acerca de ...</string>
    <string name="title_activity_preferencias">Preferencias</string>
    <string name="title_activity_puntuaciones">Puntuaciones</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_juego">Juego</string>

</resources>